--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1521,6 +1521,7 @@ span.vertical-bar {
 
 .container .contents-token .list-item .document-row-content .document-title h3 {
   margin-right: 0.625rem;
+  max-width: 50rem;
 }
 
 .container .contents-token .list-item .document-row-content .document-topic {
@@ -2243,6 +2244,7 @@ span.vertical-bar {
   width: 100%;
   height: 100%;
   border: 0.0625rem solid white;
+  position: absolute;
 }
 
 .container .contents-document .service-request .card-area .document-card-dummy .document-card:hover {
