--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-document.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-document.scss
@@ -33,6 +33,7 @@
                     width: 100%;
                     height: 100%;
                     border: 0.0625rem solid white;
+                    position: absolute;
 
                     &:hover {
                         border: 0.0625rem solid $line-gray; // 1px
