--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -123,9 +123,11 @@
             divDocumentCard.className = 'document-card';
 
             let h3Card = document.createElement('h3');
+            h3Card.className = 'text-ellipsis';
             h3Card.innerText = data.documentName;
 
             let h5Card = document.createElement('h5');
+            h5Card.className = 'text-ellipsis';
             h5Card.innerText = data.documentDesc;
 
             let divDocumentIcon = document.createElement('div');
