--- a/src/main/resources/public/template/custom-code/customCodePopup.html
+++ b/src/main/resources/public/template/custom-code/customCodePopup.html
@@ -20,8 +20,11 @@
             <div class="radio-list">
                 <ul>
                     <li th:unless="${#arrays.isEmpty(customCodeDataList)}" th:each="customCode: ${customCodeDataList}">
-                        <input type="radio" name="customCode" th:id="${customCode.key}" th:value="${customCode.value}"/>
-                        <span th:text="${customCode.value}"></span>
+                        <label class="radio" th:for="${customCode.key}" tabindex="0">
+                            <input type="radio" name="customCode" th:id="${customCode.key}" th:value="${customCode.value}"/>
+                            <span></span>
+                            <span class="label" th:text="${customCode.value}"></span>
+                        </label>
                     </li>
                     <li id="no-data" th:style="${#arrays.isEmpty(customCodeDataList)} ? '' : 'display: none'">
                         <span th:text="#{common.msg.noData}"></span>
