--- a/src/main/resources/public/template/form/formAdminList.html
+++ b/src/main/resources/public/template/form/formAdminList.html
@@ -35,14 +35,22 @@
         </td>
         <td width="10%">
             <th:block th:switch="${#authorization.expression('hasAuthority(''form.read'')')}">
-                <a th:case="true" th:attr="onclick=|openFormDesignerView('${form.id}')|"><img src="../assets/media/icons/icon_preview.svg"/></a>
-                <a th:case="*" th:attr="onclick=|aliceJs.alertWarning('#{auth.msg.accessDenied}')|"><img src="../assets/media/icons/icon_preview.svg"/></a>
+                <button th:case="true" type="button" class="default-fill" th:onclick="openFormDesignerView([[${form.id}]])">
+                    <span class="icon-search"></span>
+                </button>
+                <button th:case="*" type="button" class="default-fill" th:onclick="|aliceJs.alertWarning('#{auth.msg.accessDenied}')|">
+                    <span class="icon-search"></span>
+                </button>
             </th:block>
         </td>
         <td width="10%">
             <th:block th:switch="${#authorization.expression('hasAnyAuthority(''form.create'', ''form.update'')')}">
-                <a th:case="true" th:disabled="${!form.editable}" th:attr="onclick=|openFormDesignerEdit('${form.id}')|"><img src="../assets/media/icons/icon_edit.svg"/></a>
-                <a th:case="*" th:disabled="${!form.editable}" th:attr="onclick=|aliceJs.alertWarning('#{auth.msg.accessDenied}')|"><img src="../assets/media/icons/icon_edit.svg"/></a>
+                <button th:case="true" type="button" th:disabled="${!form.editable}" th:onclick="openFormDesignerEdit([[${form.id}]])">
+                    <span class="icon-edit"></span>
+                </button>
+                <button th:case="*" type="button" th:onclick="|aliceJs.alertWarning('#{auth.msg.accessDenied}')|">
+                    <span class="icon-edit"></span>
+                </button>
             </th:block>
         </td>
         <td width="10%" th:text="#{${form.status}}"></td>
