--- a/src/main/resources/public/src/scss/process/_layout.scss
+++ b/src/main/resources/public/src/scss/process/_layout.scss
@@ -38,19 +38,41 @@
           color: $white;
       }
 
-      a {
-          text-decoration: none;
-          margin-right: 2.5625rem; // 41px
-          height: $process-toolbar-real-height;
-          line-height: $process-toolbar-real-height;
-          vertical-align: middle;
-          float: left;
-          display: flex;
-          align-items: center;
+      button {
+        margin-right: 2.5625rem; // 41px
+        padding: 0;
+        height: $process-toolbar-real-height;
+        line-height: $process-toolbar-real-height;
+        vertical-align: middle;
+        float: left;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
 
-          img {
-              cursor: pointer;
-          }
+        .icon-save {
+          display: inline-block;
+          @include maskImage('#{$icon-folder-path}process/topmenu/icon_save.svg', 20px, 20px, no-repeat, center, 20px 20px, $white);
+        }
+        .icon-save-as {
+          display: inline-block;
+          @include maskImage('#{$icon-folder-path}process/topmenu/icon_save_as.svg', 20px, 20px, no-repeat, center, 20px 20px, $white);
+        }
+        .icon-simulation {
+          display: inline-block;
+          @include maskImage('#{$icon-folder-path}process/topmenu/icon_simulation.svg', 20px, 20px, no-repeat, center, 20px 20px, $white);
+        }
+        .icon-undo {
+          display: inline-block;
+          @include maskImage('#{$icon-folder-path}process/topmenu/icon_undo.svg', 20px, 20px, no-repeat, center, 20px 20px, $white);
+        }
+        .icon-redo {
+          display: inline-block;
+          @include maskImage('#{$icon-folder-path}process/topmenu/icon_redo.svg', 20px, 20px, no-repeat, center, 20px 20px, $white);
+        }
+        .icon-image-download {
+          display: inline-block;
+          @include maskImage('#{$icon-folder-path}process/topmenu/icon_image_download.svg', 20px, 20px, no-repeat, center, 20px 20px, $white);
+        }
       }
 
       span.separator {
