--- a/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
+++ b/src/main/resources/public/src/scss/theme/default/contents/_contents-token.scss
@@ -34,6 +34,7 @@
                         bottom: 0.0625rem solid $line-gray; // 1px
                     }
                     &-content {
+                        cursor: pointer;
                         .document-title {
                             display: flex;
                             flex-direction: row;
