--- a/src/main/resources/public/template/document/documentAdminList.html
+++ b/src/main/resources/public/template/document/documentAdminList.html
@@ -39,15 +39,14 @@
         <td style="width: 20%;" th:text="${document.documentDesc}"></td>
         <td style="width: 15%;" th:text="#{${document.documentStatus}}"></td>
         <td style="width: 10%;">
-            <a sec:authorize="hasAuthority('document.admin.update')"
-               th:attr="onclick=|openDocumentEdit('${document.documentId}')|">
-                <img src="../assets/media/icons/icon_edit.svg"></a>
-            </a>
+            <button type="button" sec:authorize="hasAuthority('document.admin.update')" th:onclick="openDocumentEdit([[${document.documentId}]])">
+                <span class="icon-edit"></span>
+            </button>
         </td>
         <td style="width: 10%;">
-            <a sec:authorize="hasAuthority('document.admin.delete')"
-               th:attr="onclick=|deleteDocument('${document.documentId}')|">
-                <img src="../assets/media/icons/icon_delete.svg"></a>
+            <button type="button" sec:authorize="hasAuthority('document.admin.delete')" th:onclick="deleteDocument([[${document.documentId}]])">
+                <span class="icon-delete"></span>
+            </button>
         </td>
     </tr>
     </tbody>
