--- a/src/main/resources/public/template/login.html
+++ b/src/main/resources/public/template/login.html
@@ -15,8 +15,7 @@
             <img class="login-logo" th:src="@{/assets/media/icons/icon_logo.svg}" width="274" height="40" alt="Zenius ITSM">
             <img class="login-main-image" th:src="@{/assets/media/images/login/img_login_main.png}" width="1071" height="710" alt="Login Main">
         </div>
-        <button type="button" class="login-btn login-btn-return" th:text="#{common.btn.return}"
-                onclick="location.href='/portal/portalMain'"></button>
+        <a href="/portal/portalMain" class="login-btn login-btn-return" th:text="#{common.btn.return}"></a>
         <div class="login-form">
             <h1 th:text="#{portal.label.login}"></h1>
             <div class="login-base">
