--- a/src/main/resources/public/template/process/processDesignerEdit.html
+++ b/src/main/resources/public/template/process/processDesignerEdit.html
@@ -34,27 +34,27 @@
             <span class="process-designer">Process Designer</span>
             <span class="separator"></span>
             <th:block th:if="${#strings.isEmpty(isView)}">
-                <a href="#" id="btnSave">
-                    <img th:src="@{/assets/media/icons/process/topmenu/icon_save.png}"/>
-                </a>
+                <button type="button" id="btnSave">
+                    <span class="icon-save"></span>
+                </button>
             </th:block>
-            <a href="#" id="btnSaveAs">
-                <img th:src="@{/assets/media/icons/process/topmenu/icon_save_as.png}"/>
-            </a>
+            <button type="button" id="btnSaveAs">
+                <span class="icon-save-as"></span>
+            </button>
             <th:block th:if="${#strings.isEmpty(isView)}">
-                <a href="#" id="btnSimulation">
-                    <img th:src="@{/assets/media/icons/process/topmenu/icon_simulation.png}"/>
-                </a>
-                <a href="#" id="btnUndo">
-                    <img th:src="@{/assets/media/icons/process/topmenu/icon_undo.png}"/>
-                </a>
-                <a href="#" id="btnRedo">
-                    <img th:src="@{/assets/media/icons/process/topmenu/icon_redo.png}"/>
-                </a>
+                <button type="button" id="btnSimulation">
+                    <span class="icon-simulation"></span>
+                </button>
+                <button type="button" id="btnUndo">
+                    <span class="icon-undo"></span>
+                </button>
+                <button type="button" id="btnRedo">
+                    <span class="icon-redo"></span>
+                </button>
             </th:block>
-            <a href="#" id="btnDownload">
-                <img th:src="@{/assets/media/icons/process/topmenu/icon_image_download.png}"/>
-            </a>
+            <button type="button" id="btnDownload">
+                <span class="icon-image-download"></span>
+            </button>
             <span class="process-name"></span>
         </div>
         <div class="process-element-palette">
