--- a/src/main/resources/public/template/user/userEdit.html
+++ b/src/main/resources/public/template/user/userEdit.html
@@ -180,7 +180,7 @@
                     acceptedFiles: '.png,.jpeg,.jpg,.gif',
                     enableImageThumbnails: true,
                     avatar: {
-                        id: [[${users?.avatarId}]],
+                        id: [[${users?.userKey}]],
                         path: [[${users?.avatarPath}]],
                         value: [[${users?.avatarValue}]],
                         size: [[${users?.avatarSize}]]
