--- a/src/main/resources/public/template/custom-code/customCodeEdit.html
+++ b/src/main/resources/public/template/custom-code/customCodeEdit.html
@@ -163,7 +163,7 @@
             if (document.getElementById('condition').childNodes.length < searchColumnLength) {
                 drawCondition();
             } else {
-                aliceJs.alertWarning(i18n.get('customCode.msg.addCondition', searchColumnLength));
+                aliceJs.alertWarning(i18n.msg('customCode.msg.addCondition', searchColumnLength));
             }
         }
 
@@ -256,7 +256,7 @@
                             if (typeof conditionData[selectValue] === 'undefined') {
                                 conditionData[selectValue] = div[i].getElementsByTagName('input')[0].value;
                             } else {
-                                aliceJs.alertWarning(i18n.get('customCode.msg.selectNotDuplicateSearchColumn'));
+                                aliceJs.alertWarning(i18n.msg('customCode.msg.selectNotDuplicateSearchColumn'));
                                 return false;
                             }
                         }
@@ -270,7 +270,7 @@
                     restSubmit(method, '/rest/custom-codes', data);
                 }
             } else if (method === 'delete') {
-                aliceJs.confirmIcon(i18n.get('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/custom-codes/' + /*[[${customCode?.customCodeId}]]*/'');
+                aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/custom-codes/' + /*[[${customCode?.customCodeId}]]*/'');
             }
         }
 
@@ -285,35 +285,35 @@
                     if (method === 'post' || method === 'put') {
                         switch (response.responseText) {
                             case STATUS_SUCCESS:
-                                aliceJs.alertSuccess(i18n.get('common.msg.save'), function () {
+                                aliceJs.alertSuccess(i18n.msg('common.msg.save'), function () {
                                     location.href = '/custom-codes/search';
                                 });
                                 break;
                             case STATUS_ERROR_CUSTOM_CODE_USED:
-                                aliceJs.alertSuccess(i18n.get('customCode.msg.customCodeUsed'));
+                                aliceJs.alertSuccess(i18n.msg('customCode.msg.customCodeUsed'));
                                 break;
                             case STATUS_ERROR_CUSTOM_CODE_NAME_DUPLICATION:
-                                aliceJs.alertWarning(i18n.get('customCode.msg.customCodeNameDuplication'));
+                                aliceJs.alertWarning(i18n.msg('customCode.msg.customCodeNameDuplication'));
                                 break;
                             case STATUS_ERROR_CUSTOM_CODE_P_CODE_NOT_EXIST:
-                                aliceJs.alertWarning(i18n.get('customCode.msg.pCodeNotExist'));
+                                aliceJs.alertWarning(i18n.msg('customCode.msg.pCodeNotExist'));
                                 break;
                             default :
-                                aliceJs.alertDanger(i18n.get('common.msg.fail'));
+                                aliceJs.alertDanger(i18n.msg('common.msg.fail'));
                                 break;
                         }
                     } else if (method === 'delete'){
                         switch (response.responseText) {
                             case STATUS_SUCCESS:
-                                aliceJs.alertSuccess(i18n.get('common.msg.delete'), function () {
+                                aliceJs.alertSuccess(i18n.msg('common.msg.delete'), function () {
                                     location.href = '/custom-codes/search';
                                 });
                                 break;
                             case STATUS_ERROR_CUSTOM_CODE_USED:
-                                aliceJs.alertWarning(i18n.get('customCode.msg.customCodeUsed'));
+                                aliceJs.alertWarning(i18n.msg('customCode.msg.customCodeUsed'));
                                 break;
                             default:
-                                aliceJs.alertDanger(i18n.get('common.msg.fail'));
+                                aliceJs.alertDanger(i18n.msg('common.msg.fail'));
                                 break;
                         }
                     }
