--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -192,7 +192,7 @@
             }
             let tdStatus = document.createElement('td');
             tdStatus.style.width = '10%';
-            tdStatus.innerText = i18n.get(data.status);
+            tdStatus.innerText = i18n.msg(data.status);
 
             let tdDescription = document.createElement('td');
             tdDescription.style.width = '28%';
