--- a/src/main/resources/public/template/user/userEditSelf.html
+++ b/src/main/resources/public/template/user/userEditSelf.html
@@ -265,7 +265,7 @@
                             aliceJs.alertWarning([[#{user.msg.sameEmail}]]);
                             break;
                         default :
-                            aliceJs.alertDanger(i18n.get('common.label.modify') + i18n.get('common.label.blank') + i18n.get('common.msg.fail'));
+                            aliceJs.alertDanger(i18n.msg('common.label.modify') + i18n.msg('common.label.blank') + i18n.msg('common.msg.fail'));
                             break;
                     }
                 }
@@ -296,7 +296,7 @@
             const rootCode = 'department.group';
             tree.load({
                 view: 'modal',
-                title: i18n.get('department.label.deptList'),
+                title: i18n.msg('department.label.deptList'),
                 search: '',
                 root: rootCode,
                 rootLevel: 5,
