--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -82,7 +82,7 @@
                     <div class="btn-bar margin-top-50">
                         <button sec:authorize="hasAuthority('code.delete')"
                                 class="point-fill" type="button" id="btnDelete" name="btnDelete"
-                                th:onclick="|javascript:aliceJs.confirmIcon(i18n.get('common.msg.confirmDelete'), onDelete)|" th:text="#{common.btn.delete}"></button>
+                                th:onclick="|javascript:aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), onDelete)|" th:text="#{common.btn.delete}"></button>
                         <button sec:authorize="hasAuthority('code.update')"
                                 class="point-fill" type="button" id="btnUpdate" name="btnUpdate"
                                 th:onclick="|javascript:onSave('put')|" th:text="#{common.btn.update}"></button>
@@ -225,24 +225,24 @@
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
                             tree.setTreeExpandNode(sessionKey);
-                            aliceJs.alertSuccess(i18n.get('common.msg.register'), function() {
+                            aliceJs.alertSuccess(i18n.msg('common.msg.register'), function() {
                                 window.location.href = '/codes/edit';
                             });
                             break;
                         case STATUS_SUCCESS_EDIT_CODE:
                             tree.setTreeExpandNode(sessionKey);
-                            aliceJs.alertSuccess(i18n.get('common.msg.modify'), function() {
+                            aliceJs.alertSuccess(i18n.msg('common.msg.modify'), function() {
                                 window.location.href = '/codes/edit';
                             });
                             break;
                         case STATUS_ERROR_CODE_P_CODE_NOT_EXIST:
-                            aliceJs.alertWarning(i18n.get('code.msg.pCodeNotExist'));
+                            aliceJs.alertWarning(i18n.msg('code.msg.pCodeNotExist'));
                             break;
                         case STATUS_ERROR_CODE_DUPLICATION:
-                            aliceJs.alertWarning(i18n.get('code.msg.duplicateCode'));
+                            aliceJs.alertWarning(i18n.msg('code.msg.duplicateCode'));
                             break;
                         default:
-                            aliceJs.alertDanger(i18n.get('common.msg.fail'));
+                            aliceJs.alertDanger(i18n.msg('common.msg.fail'));
                             break;
                     }
                 }
@@ -260,15 +260,15 @@
                     switch (response.responseText) {
                         case STATUS_SUCCESS:
                             tree.setTreeExpandNode(sessionKey);
-                            aliceJs.alertSuccess(i18n.get('common.msg.delete'), function() {
+                            aliceJs.alertSuccess(i18n.msg('common.msg.delete'), function() {
                                 window.location.href ='/codes/edit';
                             });
                             break;
                         case STATUS_ERROR_CODE_P_CODE_USED:
-                            aliceJs.alertWarning(i18n.get('code.msg.referenceCodeExist'));
+                            aliceJs.alertWarning(i18n.msg('code.msg.referenceCodeExist'));
                             break;
                         default:
-                            aliceJs.alertDanger(i18n.get('common.msg.fail'));
+                            aliceJs.alertDanger(i18n.msg('common.msg.fail'));
                             break;
                     }
                 }
