--- a/src/main/resources/public/template/custom-code/customCodeSearch.html
+++ b/src/main/resources/public/template/custom-code/customCodeSearch.html
@@ -122,7 +122,7 @@
             tdCustomCodeName.appendChild(aCustomCodeName);
 
             let tdType = document.createElement('td');
-            tdType.innerText = i18n.get('customCode.label.' + data.type);
+            tdType.innerText = i18n.msg('customCode.label.' + data.type);
             tdType.style.width = '20%';
 
             let tdCreateUserName = document.createElement('td');
