--- a/src/main/resources/public/template/document/documentAdminSearch.html
+++ b/src/main/resources/public/template/document/documentAdminSearch.html
@@ -72,7 +72,7 @@
         }
 
         function deleteDocument(documentId) {
-            aliceJs.confirmIcon(i18n.get('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/documents-admin/' + documentId, function(result) {
+            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/documents-admin/' + documentId, function(result) {
                 if (JSON.parse(result)) {
                     aliceJs.alertSuccess('[[#{common.msg.delete}]]', function() {
                         location.reload();
@@ -179,7 +179,7 @@
 
             let tdDocumentStatus = document.createElement('td');
             tdDocumentStatus.style.width = '15%';
-            tdDocumentStatus.innerText = i18n.get(data.documentStatus);
+            tdDocumentStatus.innerText = i18n.msg(data.documentStatus);
 
             let tdDocumentEdit = document.createElement('td');
             tdDocumentEdit.style.width = '10%';
