--- a/src/main/resources/public/template/notice/noticeEdit.html
+++ b/src/main/resources/public/template/notice/noticeEdit.html
@@ -101,7 +101,7 @@
                             th:text="#{common.btn.modify}">
                     </button>
                     <button sec:authorize="hasAuthority('notice.delete')" th:if="${notice?.noticeNo}" type="button" id="delete"
-                            class="default-fill" th:onclick="aliceJs.confirmIcon(i18n.get('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/notices/{noticeNo}(noticeNo=${notice.noticeNo})}]])"
+                            class="default-fill" th:onclick="aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', [[@{/rest/notices/{noticeNo}(noticeNo=${notice.noticeNo})}]])"
                             th:text="#{common.btn.delete}">
                     </button>
                 </div>
@@ -231,7 +231,7 @@
                 params: jsonData,
                 contentType: 'application/json',
                 callbackFunc: function() {
-                    aliceJs.alertSuccess(i18n.get('common.msg.register'), function() {
+                    aliceJs.alertSuccess(i18n.msg('common.msg.register'), function() {
                         window.location.href = '/notices/search';
                     });
 
@@ -285,11 +285,11 @@
                 contentType: 'application/json',
                 callbackFunc: function() {
                     if (method === 'put') {
-                        aliceJs.alertSuccess(i18n.get('common.msg.modify'), function() {
+                        aliceJs.alertSuccess(i18n.msg('common.msg.modify'), function() {
                             window.location = '/notices/search';
                         });
                     } else if (method === 'delete') {
-                        aliceJs.alertSuccess(i18n.get('common.msg.delete'), function() {
+                        aliceJs.alertSuccess(i18n.msg('common.msg.delete'), function() {
                             window.location = '/notices/search';
                         });
                     }
