--- a/src/main/resources/public/template/process/processAdminEdit.html
+++ b/src/main/resources/public/template/process/processAdminEdit.html
@@ -72,7 +72,7 @@
 
         // 프로세스 삭제
         function deleteProcess(processId) {
-            aliceJs.confirmIcon(i18n.get('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/processes/' + processId, function() {
+            aliceJs.confirmIcon(i18n.msg('common.msg.confirmDelete'), restSubmit, null, 'delete', '/rest/processes/' + processId, function() {
                 aliceJs.alertSuccess('[[#{common.msg.delete}]]', function() {
                     window.close();
                 });
