회원 가입시 오류 수정(google, kakao 포함)

--- a/src/main/resources/public/template/certification/signup.html
+++ b/src/main/resources/public/template/certification/signup.html
@@ -102,7 +102,7 @@
                 acceptedFiles: '.png,.jpeg,.jpg,.gif',
                 enableImageThumbnails: true,
                 avatar: {
-                    id: [[${users?.avatarId}]],
+                    id: [[${users?.userKey}]],
                     path: [[${users?.avatarPath}]],
                     value: [[${users?.avatarValue}]],
                     size: [[${users?.avatarSize}]]
