버그 수정 - 포탈 공지사항, 자료실 화면에서 달력 이미지 추가 - 로그인 화면에서 돌아가기 버튼 색상 변경 - 문서함 / 신청 메뉴에서 문서함, 신청서 메뉴에서 데이터가 없을 경우 이미지 404 에러 수정

--- a/src/main/resources/public/src/scss/portal/_elements.scss
+++ b/src/main/resources/public/src/scss/portal/_elements.scss
@@ -37,7 +37,7 @@ input {
         background-color: $element-bg-color;
     }
     &.search-date {
-        background: url($icon-folder-path + "icon_calendar.png") no-repeat 100%-5 50%;
+        background: url($icon-folder-path + "icon_calendar.svg") no-repeat 100%-5 50%;
         background-color: $element-bg-color;
     }
 }
