--- a/src/main/resources/public/src/scss/portal/_login.scss
+++ b/src/main/resources/public/src/scss/portal/_login.scss
@@ -9,6 +9,7 @@
         background-color: $point-blue;
         height: 100%;
         width: 80.3125rem; // 1285px;
+        color: $white;
         .login-main-image {
             margin-top: 155px;
             margin-left: 6.875rem; // 110px
