--- a/src/main/resources/public/src/scss/theme/default/_container.scss
+++ b/src/main/resources/public/src/scss/theme/default/_container.scss
@@ -101,7 +101,7 @@ div.no-data-found {
     border-radius: 0.0625rem; // 1px
     pointer-events: none;
     img.no-data-icon {
-        content: url("../icons/icon_no_data.svg")
+        content: url("../media/icons/icon_no_data.svg")
     }
     span.no-data-text {
         font-size: 1.125rem;; // 18px
