--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -687,7 +687,7 @@ input.search {
 }
 
 input.search-date {
-  background: url("../media/icons/icon_calendar.png") no-repeat 95% 50%;
+  background: url("../media/icons/icon_calendar.svg") no-repeat 95% 50%;
   background-color: #ffffff;
 }
 
@@ -1514,6 +1514,7 @@ input.search-date {
   background-color: #0098FF;
   height: 100%;
   width: 80.3125rem;
+  color: #FFFFFF;
 }
 
 .login-background .login-main-image {
