--- a/src/main/resources/public/template/error.html
+++ b/src/main/resources/public/template/error.html
@@ -15,6 +15,7 @@
     <div class="error-div-right">
         <h1 th:text="#{error.label.topPhrase}"></h1>
         <h1 th:text="#{error.label.middlePhrase}"></h1>
+        <p th:text="${message}" class="error-code-txt"/>
         <p th:text="|#{error.label.errorCode} : ${error} (${status})|" class="error-code-txt"/>
         <p th:text="#{error.label.bottomPhrase}" class="error-bottom-txt"/>
         <button th:text="#{error.btn.return}" class="error-btn"></button>
